UI and logic update for form

--- a/www/templates/HelpMe.html
+++ b/www/templates/HelpMe.html
@@ -17,7 +17,7 @@
             </div>
 
             <div style="text-align: center;padding-top: 30%;">
-                <img ng-Click="shakeHandler()" src="../img/helpMe.png" style="height: 200px;border-radius: 50%;background-color: lightgray;" />
+                <img ng-Click="shakeHandler()" src="../img/helpMe.png" style="height: 200px;border-radius: 50%;background-color: lightgray;box-shadow: 0 0 3px #800505;" />
             </div>
         </ion-list>
 
