--- a/www/templates/Tour/Welcome.html
+++ b/www/templates/Tour/Welcome.html
@@ -24,30 +24,22 @@
 			<div class="list">
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel"> Name</div>
-			    <input type="text" placeholder="John">
+			    <input type="text" placeholder="John" class="inputCSS" ng-model="user.name">
 			    </label>
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Mobile</div>
-			    <input type="text" placeholder="1234567890">
+			    <input type="text" placeholder="1234567890" class="inputCSS"  ng-model="user.mobile">
 			    </label>
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Email</div>
-			    <input type="text" placeholder="john@xxx.com">
+			    <input type="text" placeholder="john@xxx.com" class="inputCSS"  ng-model="user.email">
 			    </label>
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Blood Group(Optional)</div>
-			     <select class="tour-Select">
-			      <option selected>O +</option>
-			      <option >O -</option>
-			      <option>A +</option>
-			      <option>A -</option>
-			      <option>B +</option>
-			      <option>B -</option>
-			      <option>AB +</option>
-			      <option>AB -</option>
-			    </select>
+			     	<select class="tour-Select" ng-model="user.bloodGroup" ng-options="opt as opt.label for opt in bloodGroupList ">
+			     	</select>
 			    </label>
-				<a href="#/app/dashboard">
+				<a ng-Click="btnSubmit(user)">
 					<div class="tour-submit">
 						Submit
 					</div>
