--- a/www/templates/Tour/Welcome.html
+++ b/www/templates/Tour/Welcome.html
@@ -20,7 +20,7 @@
 
 		<ion-slide>
 			<span class="icon icon-slide"></span>
-			<h4>User Information Form</h4>
+			<h4>Personal Information</h4>
 			<div class="list">
 				<label class="item item-input item-stacked-label">
 			    <div class="input-customlabel"> Name</div>
