--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,9 @@
 /* Empty. Add your own CSS if you like */
+::-webkit-scrollbar { 
+    display: none; 
+}
+
+
 .landing_bg{
 	/*background-color: #aa1d1d;*/
 	background-color: #f8796c;    
