--- a/www/templates/ManageContact.html
+++ b/www/templates/ManageContact.html
@@ -2,8 +2,9 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-content class="has-header" style="height:80%">
-       		
+  <ion-content class="has-header">
+
+       		<div style="height:90%;overflow-y: scroll;overflow-x: hidden;">
 			<div class="list">
 				<h4 style="padding-left: 15px;">Personal Information</h4>
 				<label class="item item-input item-stacked-label">
@@ -48,11 +49,15 @@
 			    <input type="text" placeholder="1234567890" class="inputCSS" ng-model="user.Contact5">
 			    </label>
 			</div>
+			</div>
+			<div>
+			<a ng-Click="btnSave(user)">
+				<div class="bottomButton">
+					Save
+				</div>
+		    </a>
+		    </div>
     
   </ion-content>
-  <a ng-Click="btnSave(user)">
-		<div class="bottomButton">
-			Save
-		</div>
-  </a>
+  
 </ion-view>
