tweaks for scroll

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,8 +1,8 @@
 /* Empty. Add your own CSS if you like */
-::-webkit-scrollbar { 
+/*::-webkit-scrollbar { 
     display: none; 
 }
-
+*/
 
 .landing_bg{
 	/*background-color: #aa1d1d;*/
