emergency screen updated

--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -18,11 +18,13 @@
 			<div>
 				<div class="row">
 					<div class="col"> 
+					<a ng-Click="onClickEmergency()">
 					<span class="icon icon-xl icon-grayscale-darken  ion-alert-circled">
 	          			<p class="big">
 							Emergency
 						</p>
 		          	</span>
+		          	</a>
 		        	</div>
 					<div class="col">
 		            <!-- <a href="#/app/BBlist">
