--- a/www/templates/Tour/Welcome.html
+++ b/www/templates/Tour/Welcome.html
@@ -2,19 +2,19 @@
 
 	<ion-slide-box show-pager="true">
 		<ion-slide>
-			<div><img style="height: 250px;width: 250px;" src="../../img/tour/tour-bb.png"/></div>
+			<div><img style="height: 100%;width: 100%;" src="././img/tour/tour-bb.png"/></div>
 			<h3>Find nearest blood bank based on states and cities</h3>
 		</ion-slide>
 		<ion-slide>
-			<div><img style="height: 250px;width: 250px;" src="../../img/tour/tour-emergency.png"/></div>
+			<div><img style="height: 100%;width: 100%;" src="././img/tour/tour-emergency.png"/></div>
 			<h3>Find emergency contact details</h3>
 		</ion-slide>
 		<ion-slide>
-			<div><img style="height: 250px;width: 250px;" src="../../img/tour/tour-medical.png"/></div>
+			<div><img style="height: 100%;width: 100%;" src="././img/tour/tour-medical.png"/></div>
 			<h3>Find Hospitals and Doctors</h3>
 		</ion-slide>
 		<ion-slide>
-			<div><img style="height: 250px;width: 250px;" src="../../img/tour/tour-helpme.png"/></div>
+			<div><img style="height: 100%;width: 100%;" src="././img/tour/tour-helpme.png"/></div>
 			<h3>Shake and share your details to someone for your help, when you are in trouble</h3>
 		</ion-slide>
 
