Drop down fixed in screen

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -168,6 +168,13 @@ overflow: hidden;
 padding-top: 50px;
 }
 
+.container-margin {
+    margin-top: 100px;
+}
+
+.dropdown-margin {
+    margin-top: 44px;
+}
 
 /*nav-bar-title:parent { left: 30px !important;  }*/
 /**/
