--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -9,10 +9,8 @@
     </ion-nav-title>
     <ion-nav-back-button class="button-clear go-back">
     </ion-nav-back-button>
-    <ion-content class="has-header">
-        
-        <ion-list>
-            <label class="item item-input item-select item-assertive">
+    <div class="dropdown-margin">
+        <label class="item item-input item-select item-assertive">
                 <div class="input-label">
                     Select State
                 </div>
@@ -32,6 +30,11 @@
                     <!--<option ng-repeat="city in cities" value="{{city.id}}">{{city.name}}</option>-->
                 </select>
             </label>
+    </div>
+    <ion-content class="has-header container-margin">
+        
+        <ion-list>
+            
             <div ng-model="group.city" ng-repeat="group in groups">
                 <ion-item class="item-stable  item-icon-right"
                           ng-click="toggleGroup(group)"
