--- a/www/templates/Emergency.html
+++ b/www/templates/Emergency.html
@@ -16,10 +16,12 @@
                     <div class="card">
                             <div class="item item-divider">
                                 <div>
-                                   <div><a href="tel:{{item.helpline}}"><i class="icon ion-ios-telephone custom-ios-telephone" style="font-size: 16px;padding-right: 6px;"></i> {{item.helpline}} </a>
+                                   <div class="custom-android-textsms set-height">
+                                        {{item.description}}
                                    </div>
-                                   <div> <a ><i class="icon ion-android-textsms custom-android-textsms" style="font-size: 16px;"> {{item.description}} </i></a>
+                                   <div style="width:100px"><a href="tel:{{item.helpline}}"><i class="icon ion-ios-telephone custom-ios-telephone" style="font-size: 16px;padding-right: 6px;"></i> {{item.helpline}} </a>
                                    </div>
+                                   
                                 </div>
                             </div>
                     </div>
