--- a/www/templates/SideMenu.html
+++ b/www/templates/SideMenu.html
@@ -33,7 +33,7 @@
               </span> Contact US
           </ion-item>
 
-          <ion-item class="item-icon-left" nav-clear menu-close href="#/app/dashboard">
+          <ion-item class="item-icon-left" nav-clear menu-close ng-click="shareMe()">
               <span class="icon ion-share">
               </span> Share LifeLine
           </ion-item>
