--- a/www/templates/BloodBankList.html
+++ b/www/templates/BloodBankList.html
@@ -55,9 +55,9 @@
                         </div>
                         <div class="item item-divider">
                             <div style="display: flex;justify-content: space-between;">
-                               <div><a href="tel:NA"><i class="icon item-icon-right ion-ios-telephone custom-ios-telephone" style="font-size: 16px;"> {{item.contact}}</i></a>
+                               <div><a href="tel: {{item.contact}}"><i class="icon item-icon-right ion-ios-telephone custom-ios-telephone" style="font-size: 16px;"> {{item.contact}}</i></a>
                                </div>
-                               <div> <a href="mailto:NA" class=""><i class="icon item-icon-right ion-android-textsms custom-android-textsms" style="font-size: 16px;"> Share</i></a>
+                               <div ng-click="shareDetails(item)"> <a><i class="icon item-icon-right ion-android-textsms custom-android-textsms" style="font-size: 16px;"> Share</i></a>
                                </div>
                             </div>
                         </div>
