--- a/www/templates/Hospitality.html
+++ b/www/templates/Hospitality.html
@@ -42,23 +42,24 @@
                               ng-class="{active: isGroupShown(group)}">
                         <i class="icon" ng-class="isGroupShown(group) ? 'ion-chevron-down custom-chevron-down' : 'ion-chevron-right'"></i>
                         &nbsp;
-                       {{group.name}}
+                       {{group.h_name}}
                     </ion-item>
                     <ion-item class="item-accordion"
+                     ng-repeat="item in group.items"
                               ng-show="isGroupShown(group)">
                         <div class="card">
                             <div class="item item-text-wrap" style="font-family:Verdana,sans-serif">
-                                <strong>Name:</strong> {{group.name}}<br/>
-                                <strong>Address:</strong> {{group.formatted_address}} <br />
-                                <strong>Open Now:</strong> {{group.opening_hours.open_now}}  <br />
-                                <strong>Rating:</strong> {{group.rating}}<br />
+                                <strong>Name:</strong> {{item.h_name}}<br/>
+                                <strong>Address:</strong> {{item.address}} <br />
+                                <strong>Postal:</strong> {{item.pincode}}  <br />
+                                <strong>Rating:</strong> {{item.rating}}<br />
                             </div>
                             <div class="item item-divider">
                                 <div style="display: flex;justify-content: space-between;">
-                                   <div><a href="tel:NA"><i class="icon item-icon-right ion-ios-telephone custom-ios-telephone" style="font-size: 16px;"></i></a>
+                                   <div><a href="tel:{{item.contact}}"><i class="icon item-icon-right ion-ios-telephone custom-ios-telephone" style="font-size: 16px;"></i></a>
                                    </div>
-                                   <div> <a href="mailto:NA" class=""><i class="icon item-icon-right ion-android-textsms custom-android-textsms" style="font-size: 16px;"> Share</i></a>
-                                   </div>
+                                     <div ng-click="shareDetails(item)"> <a><i class="icon item-icon-right ion-android-textsms custom-android-textsms" style="font-size: 16px;"> Share</i></a>
+                               </div>
                                 </div>
                             </div>
                         </div>
