--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -36,6 +36,17 @@
 			        </a> -->
 		          	</div>
 		          	<div class="col">
+					<!-- <a ng-Click="onClickForHelp()">
+					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
+			            <p class="big">
+							Help me
+						</p>
+			        </span>
+			        </a> -->
+			        </div>
+				</div>
+				<div class="row">
+					<div class="col">
 					<a ng-Click="onClickForHelp()">
 					<span class="icon icon-xl icon-grayscale-darken  ion-speakerphone">
 			            <p class="big">
@@ -44,17 +55,27 @@
 			        </span>
 			        </a>
 			        </div>
-				</div>
-				<div class="row">
-					<div class="col">
-					<a ng-Click="onClickHospitality('Hospitals')"> 
-					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
+					<div class="col"> 
+					<!-- <a ng-Click="onClickHospitality('Doctors')">
+					<span class="icon icon-xl icon-grayscale-darken  ion-person-stalker">
 			            <p class="big">
-							Hospitals
+							Doctors
 						</p>
 			        </span>
-			        </a>
+			        </a> -->
 			        </div>
+			        <div class="col">
+					<!-- <a ng-Click="onClickHospitality('Dentist')"> 
+					<span class="icon icon-xl icon-grayscale-darken  ion-person">
+			            <p class="big">
+							Dentist
+						</p>
+			        </span>
+			        </a> -->
+			        </div>
+				</div>
+				<div class="row">
+					
 					<div class="col"> 
 					<a ng-Click="onClickHospitality('Doctors')">
 					<span class="icon icon-xl icon-grayscale-darken  ion-person-stalker">
@@ -65,34 +86,13 @@
 			        </a>
 			        </div>
 			        <div class="col">
-					<a ng-Click="onClickHospitality('Dentist')"> 
-					<span class="icon icon-xl icon-grayscale-darken  ion-person">
+		            <a ng-Click="onClickHospitality('Hospitals')"> 
+					<span class="icon icon-xl icon-grayscale-darken  ion-medkit">
 			            <p class="big">
-							Dentist
+							Hospitals
 						</p>
 			        </span>
 			        </a>
-			        </div>
-				</div>
-				<div class="row">
-					
-					<div class="col"> 
-					<a ng-Click="onClickHospitality('Pharmacy')">
-					<span class="icon icon-xl icon-grayscale-darken  ion-briefcase">
-			            <p class="big">
-							Pharmacy
-						</p>
-			        </span>
-			        </a>
-			        </div>
-			        <div class="col">
-		            <!-- <a href="#/app/BBlist">
-		                <span class="icon icon-xl icon-grayscale-darken  ion-waterdrop">
-		          		<p class="big">
-							Blood Banks
-						</p>
-			            </span>
-			        </a> -->
 		          	</div>
 			        <div class="col">
 		            <a href="#/app/BBlist">
