--- a/www/templates/Feedback.html
+++ b/www/templates/Feedback.html
@@ -5,10 +5,10 @@
   <ion-content class="has-header" style="height:80%">
        		
 			<div class="list">
-				<label class="item item-input item-stacked-label">
+				<!-- <label class="item item-input item-stacked-label">
 			    <div class="input-customlabel">Email :</div>
 			    <input type="text" placeholder="john@xxx.com" class="inputCSS">
-			    </label>
+			    </label> -->
 
 			    <label class="item item-input item-stacked-label">
 			    <div class="input-customlabel"> Suggestion :</div>
