--- a/www/templates/ManageContact.html
+++ b/www/templates/ManageContact.html
@@ -62,16 +62,16 @@
 			    <div class="input-customlabel">Contact 5:</div>
 			    <input type="text" placeholder="1234567890" class="inputCSS" ng-model="user.Contact5">
 			    </label>
+			    <label class="item item-input item-stacked-label">
+			    <div class="input-customlabel"></div>
+			    <!-- <input type="text" placeholder="1234567890" class="inputCSS" ng-model="user.Contact5"> -->
+			    </label>
 			</div>
 			</div>
-			<div>
-			<a ng-Click="btnSave(user)">
-				<div class="bottomButton">
-					Save
-				</div>
-		    </a>
-		    </div>
-    
   </ion-content>
-  
+  <div>
+	<a ng-Click="btnSave(user)">
+		<div class="bottomButton">Save</div>
+	</a>
+  </div>
 </ion-view>
