--- a/platforms/android/assets/www/templates/Tour/Welcome.html
+++ b/platforms/android/assets/www/templates/Tour/Welcome.html
@@ -6,8 +6,9 @@
 			<h3>Find nearest blood bank based on states and cities</h3> -->
 			<div id="container">
 				 <div id="container-top">
-				 <img style="height: 100px;width: 100px" src="././img/tour/tour-bb.png"/>
-				 <div>Find nearest blood bank based on states and cities</div>
+				 <!-- <img class="img-100px" src="././img/tour/tour-bb.png"/> -->
+				 <span class="icon icon-xl icon-grayscale-darken  ion-waterdrop"></span>
+				 <div class="tour-text">Find nearest blood bank based on states and cities</div>
 				 </div>
 				 
 				 <div id="container-bottom">
@@ -20,8 +21,9 @@
 			<h3>Find emergency contact details</h3> -->
 			<div id="container">
 				 <div id="container-top">
-				 <img style="height: 100px;width: 100px" src="././img/tour/tour-emergency.png"/>
-				 <div>Find emergency contact details</div>
+				 <!-- <img class="img-100px" src="././img/tour/tour-emergency.png"/> -->
+				 <span class="icon icon-xl icon-grayscale-darken  ion-alert-circled"></span>
+				 <div class="tour-text">Find emergency contact details</div>
 				 </div>
 				 
 				 <div id="container-bottom">
@@ -34,8 +36,9 @@
 			<h3>Find Hospitals and Doctors</h3> -->
 			<div id="container">
 				 <div id="container-top">
-				 <img style="height: 100px;width: 100px" src="././img/tour/tour-medical.png"/>
-				 <div>Find Hospitals and Doctors</div>
+				 <!-- <img class="img-100px" src="././img/tour/tour-medical.png"/> -->
+				 <span class="icon icon-xl icon-grayscale-darken  ion-medkit"></span>
+				 <div class="tour-text">Find Hospitals and Doctors</div>
 				 </div>
 				 
 				 <div id="container-bottom">
@@ -48,8 +51,9 @@
 			<h3>Shake and share your details to someone for your help, when you are in trouble</h3> -->
 			<div id="container">
 				 <div id="container-top">
-				 <img style="height: 100px;width: 100px;" src="././img/tour/tour-helpme.png"/>
-				 <div>Shake and share your details to someone for your help, when you are in trouble</div>
+				 <!-- <img class="img-100px" src="././img/tour/tour-helpme.png"/> -->
+				 <span class="icon icon-xl icon-grayscale-darken  ion-speakerphone"></span>
+				 <div class="tour-text">Shake and share your details to someone for your help, when you are in trouble</div>
 				 </div>
 				 
 				 <div id="container-bottom">
