--- a/www/css/tour.css
+++ b/www/css/tour.css
@@ -26,7 +26,7 @@ display: inline-block;
     color: white;
     font-size: 23px;
     position: fixed;
-    bottom: 60px;
+   /*bottom: 40px;*/
     background-color: #f8796c;
 }
 
