--- a/www/css/tour.css
+++ b/www/css/tour.css
@@ -27,7 +27,7 @@ display: inline-block;
     font-size: 23px;
     position: fixed;
     bottom: 60px;
-    background-color: #f8796c;
+    background-color: green;
 }
 
 .tour-text {
