--- a/www/css/style.css
+++ b/www/css/style.css
@@ -104,7 +104,7 @@ color: #e74c3c;
     position: fixed;
     bottom: 0px;
     text-align: center;
-    background-color: #f8796c;
+    background-color: green;
     color: white;
 }
 
