--- a/www/templates/SideMenu.html
+++ b/www/templates/SideMenu.html
@@ -6,7 +6,6 @@
     </ion-nav-bar>
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
   </ion-pane>
-
   <ion-side-menu side="left" >
       <ion-header-bar class="bar-stable">
           <h1 class="title"><span>Life</span><span style="color:red">Line</span></h1>
@@ -18,10 +17,15 @@
               </span> Home
           </ion-item>
           
-          <ion-item class="item-icon-left" nav-clear menu-close href="#/app/addContact">
+          <ion-item class="item-icon-left" nav-clear menu-close href="#/app/manageContact">
               <span class="icon ion-ios-cog">
-              </span> Manage 
+              </span> Manage Account 
           </ion-item>
+
+          <!-- <ion-item  class="item-icon-left" nav-clear menu-close href="#/app/addContact">
+              <span class="icon ion-ios-contact-outline">
+              </span> Health Calculator
+          </ion-item> -->
 
           <ion-item class="item-icon-left" nav-clear menu-close href="#/app/feedback">
               <span class="icon ion-ios-compose">
