--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -36,7 +36,9 @@
 				<div class="row">
 					
 					<div class="col"> 
-					<a ng-Click="onClickHospitality('Doctors')">
+					<!--<a ng-Click="onClickHospitality('Doctors')">-->
+						<!--<a href="#/app/doctors">-->
+						 <a  href="#" onclick="window.open('https://www.practo.com/', '_blank','location=no'); return false;">
 					<span class="icon icon-xl icon-grayscale-darken  ion-person-stalker">
 			            <p class="big">
 							Doctors
