customised popup screen based on target audience

--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -105,7 +105,7 @@
           <div class="popup-body-content" ng-bind-html="modalDesc | unsafe"></div>
         </div>
         <div class="modal-footer">
-          <button class="btn" ng-click="onClickShare()">Share with Friends</button>
+          <button class="btn" ng-click="onClickShare('popup')">Share with Friends</button>
         </div>
       </div>
 
