popup based on condition and state

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -236,6 +236,9 @@ padding-top: 50px;
     float: right;
     font-size: 28px;
     font-weight: bold;
+    height: 100%;
+    width: 15%;
+    text-align: right;
 }
 
 .close:hover,
@@ -278,4 +281,8 @@ padding-top: 50px;
     border-radius: 11px;
     border: none;
     font-size: 13px;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
