--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -97,7 +97,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <span class="close" ng-click="onClickCloseModal()">&times;</span>
-          <h2>&nbsp;</h2>
+          <!-- <h2>&nbsp;</h2> -->
         </div>
         <div class="modal-body">
           <img style="height: 80px;width: 80px;" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcS8IHLq0XmNy2xm-vbTZgjjQW5f2KFsv5VxSoL4xTdvShi4gHiF2qXEsQ">
