Added new Image

--- a/www/templates/Dashboard.html
+++ b/www/templates/Dashboard.html
@@ -14,7 +14,7 @@
 
 		<div style="text-align: center;">
 			<p>Save the app that could save your love one.</p>
-			<img src="./img/heart-rate.png" height="120px">
+			<img src="./img/heart-rate.png" height="95px">
 			<div>
 				<div class="row">
 					<div class="col"> 
@@ -22,10 +22,12 @@
 		        	</div>
 					<div class="col">
 		            <a ng-Click="onClickEmergency()">
-					<span class="icon icon-xl icon-grayscale-darken  ion-alert-circled">
-	          			<p class="big">
+					<span class="icon icon-xl icon-grayscale-darken">
+						<img src="./img/emergencyHome.png" >
+	          			<p class="big" style=" margin-top: -25px;">
 							Emergency
 						</p>
+					
 		          	</span>
 		          	</a>
 		          	</div>
